--- a/src/pages/leaderboard/leaderboard.scss
+++ b/src/pages/leaderboard/leaderboard.scss
@@ -14,19 +14,19 @@
 }
 
 .on-selected {
-  background-color: #2962ff !important;
+  background-color: #453B8D !important;
   color: #fff;
 }
 
 .between button.days-btn {
-  background-color: #2962ff !important;
+  background-color: #453B8D !important;
   color: #fff !important;
   width: 100% !important;
   border-radius: 0 !important;
 }
 
 .endSelection button.days-btn {
-  background-color: #2962ff !important;
+  background-color: #453B8D !important;
   color: #fff;
   width: 100% !important;
   border-bottom-left-radius: 0 !important;
@@ -34,7 +34,7 @@
 }
 
 .startSelection button.days-btn {
-  background-color: #2962ff !important;
+  background-color: #453B8D !important;
   color: #fff;
   width: 100% !important;
   border-bottom-right-radius: 0 !important;
