--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -95,12 +95,12 @@ $border-radius: 4px;
 ================================================*/
 $palettes: (
   mainColors: ( // Also used for backgrounds.
-      primary:   #2962ff, // Used for toolbars, button-clear-outline, checkbox, toggle-background, tabs-background, map-header, alert
+      primary:   #453B8D, // Used for toolbars, button-clear-outline, checkbox, toggle-background, tabs-background, map-header, alert
       secondary:  #f7f7f7, // Used for various small elements, item-divider, swipe section, background Ionic App, item-md-sliding-content-background
-      secondary-first:  #2962ff, // Used for gradient
+      secondary-first:  #453B8D, // Used for gradient
       accent:   #ffffff, //Used for icon-search-bar, loaders-spinners, checkbox-item, icon, button, span, item-divider, input-field-icons, black-white-mode, header section, google-card-background-color, checkbox, toggle, search bar, input-field
-      accent-first: #2962ff, // Used for spinner, button-ion-fab, badge
-      accent-other: #2962ff, // Used for gradient, header animation, checkbox, radio, range
+      accent-first: #453B8D, // Used for spinner, button-ion-fab, badge
+      accent-other: #453B8D, // Used for gradient, header animation, checkbox, radio, range
   ),
 
   textColors: ( // Used for text colors in all screens
