--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -26,7 +26,7 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #0090d0,
+  primary:    #453B8D,
   secondary:  #f7f7f7,
   danger:     #f53d3d,
   light:      #f4f4f4,
